<?xml version="1.0"?>
<package format="2">
  <name>rosee_gui</name>
  <version>1.0.0</version>
  <description>The rosee_gui package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="luca.muratore@iit.it">Luca Muratore</maintainer>
  <maintainer email="davide.torielli@iit.it">Davide Torielli</maintainer>
  <maintainer email="toridebraus@gmail.com">Davide Torielli</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache License 2.0</license>

  <url type="website">https://advrhumanoids.github.io/ROSEndEffectorDocs/</url>
  <url type="repository">https://github.com/ADVRHumanoids/rosee_gui/</url>
  <url type="bugtracker">https://github.com/ADVRHumanoids/rosee_gui/issues/</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="luca.muratore@iit.it">Luca Muratore</author>
  <author email="davide.torielli@iit.it">Davide Torielli</author>
  <author email="liana.bertoni@iit.it">Liana Bertoni</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>srdfdom</depend>
    <depend>urdf</depend>  
    <depend>actionlib</depend>
    <depend>end_effector</depend>
    <depend>rosee_msg</depend>   
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
    <build_depend>message_generation</build_depend>
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
    <buildtool_depend>catkin</buildtool_depend>
  <!-- Use exec_depend for packages you need at runtime: -->
    <exec_depend>message_runtime</exec_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
