<?xml version="1.0"?>
<package format="2">
  <name>rosee_gui</name>
  <version>1.0.0</version>
  <description>The rosee_gui package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="luca.muratore@iit.it">Luca Muratore</maintainer>
  <maintainer email="davide.torielli@iit.it">Davide Torielli</maintainer>
  <maintainer email="toridebraus@gmail.com">Davide Torielli</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache License 2.0</license>

  <url type="website">https://advrhumanoids.github.io/ROSEndEffectorDocs/</url>
  <url type="repository">https://github.com/ADVRHumanoids/rosee_gui/</url>
  <url type="bugtracker">https://github.com/ADVRHumanoids/rosee_gui/issues/</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="luca.muratore@iit.it">Luca Muratore</author>
  <author email="davide.torielli@iit.it">Davide Torielli</author>
  <author email="liana.bertoni@iit.it">Liana Bertoni</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>srdfdom</depend>
  <depend>urdf</depend>  
  <depend>rclcpp_action</depend>
  <!--  <depend>end_effector</depend> -->
  <depend>rosee_msg</depend>   

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
